--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   </head>
   <body>
     <header>
-      <img
-        class="icon"
-        src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fus.123rf.com%2F450wm%2Fberkut2011%2Fberkut20111404%2Fberkut2011140400569%2F27388708-cinema-icon.jpg%3Fver%3D6&type=sc960_832"
-      />
+      <img class="icon" src="img/icon.png" />
       <div class="search-container">
         <img class="search-icon" src="img/search.png" />
         <input id="search-input" />
