feat: 검색 결과 없을 시 안내

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       </div>
     </header>
     <main>
-      <section id="movie-section"></section>
+      <section id="movie-section">
+        <article id="not-found">
+          입력하신 검색어와 일치하는 결과가 없습니다 🥹
+        </article>
+      </section>
     </main>
   </body>
 </html>
