feat: 검색 방법 변경 - 버튼 추가

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <header>
       <img class="icon" src="img/icon.png" />
       <div class="search-container">
-        <img class="search-icon" src="img/search.png" />
-        <input id="search-input" />
+        <form id="search-form">
+          <img class="search-icon" src="img/search.png" />
+          <input id="search-input" name="query" />
+          <button type="submit" class="search-btn">찾기</button>
+        </form>
       </div>
     </header>
     <main>
