refactor: 모듈 분리

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🎬 무비무비</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
           </form>
         </div>
       </div>
-      <div class="header-sort">정렬</div>
+      <div></div>
     </header>
     <main>
       <section id="movie-section"></section>
