--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
         입력하신 검색어와 일치하는 결과가 없습니다 🥹
       </section>
     </main>
+    <button id="scroll-top-btn"><img src="img/up.png" /></button>
   </body>
 </html>
