feat: 스크롤탑 0일 때 스크롤탑 버튼 숨기기

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         입력하신 검색어와 일치하는 결과가 없습니다 🥹
       </section>
     </main>
-    <button id="scroll-top-btn"><img src="img/up.png" /></button>
+    <button id="scroll-top-btn" class="hide"><img src="img/up.png" /></button>
   </body>
 </html>
