feat: 브라우저 탭 아이콘 추가

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>🎬 무비무비</title>
+    <title>무비무비</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/icon.png" />
+    <link rel="apple-touch-icon" href="img/icon.png" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <script type="module" src="index.js"></script>
   </head>
