--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="img/icon.png" />
     <link rel="apple-touch-icon" href="img/icon.png" />
+    <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
     <script type="module" src="index.js"></script>
   </head>
