feat: 카드 리스트 ul, li 추가

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <button id="header-lang-btn" value="en-US">ENGLISH</button>
     </header>
     <main>
-      <section id="movie-section"></section>
+      <section>
+        <ul id="movie-list"></ul>
+      </section>
       <section id="not-found">
         입력하신 검색어와 일치하는 결과가 없습니다 🥹
       </section>
