refactor: 패키지 구조 변경

--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>무비무비</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="img/icon.png" />
-    <link rel="apple-touch-icon" href="img/icon.png" />
-    <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="icon" href="./assets/icon.png" />
+    <link rel="apple-touch-icon" href="./assets/icon.png" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./style/reset.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./style/index.css"
+    />
   </head>
   <body>
     <header>
       <div class="header-search">
-        <img class="icon" src="img/icon.png" />
+        <img class="icon" src="./assets/icon.png" />
         <div class="search-container">
           <form id="search-form">
-            <img class="search-icon" src="img/search.png" />
+            <img class="search-icon" src="./assets/search.png" />
             <input id="search-input" name="query" />
             <button type="submit" id="search-btn">찾기</button>
           </form>
@@ -32,7 +42,9 @@
         입력하신 검색어와 일치하는 결과가 없습니다 🥹
       </section>
     </main>
-    <button id="scroll-top-btn" class="hide"><img src="img/up.png" /></button>
-    <script type="module" src="index.js"></script>
+    <button id="scroll-top-btn" class="hide">
+      <img src="./assets/up.png" />
+    </button>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
