style: prettier 설정

--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./assets/icon.png" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="./style/reset.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="./style/index.css"
-    />
+    <link rel="stylesheet" type="text/css" media="screen" href="./style/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./style/index.css" />
   </head>
   <body>
     <header>
@@ -38,9 +28,7 @@
       <section>
         <ul id="movie-list"></ul>
       </section>
-      <section id="not-found">
-        입력하신 검색어와 일치하는 결과가 없습니다 🥹
-      </section>
+      <section id="not-found">입력하신 검색어와 일치하는 결과가 없습니다 🥹</section>
     </main>
     <button id="scroll-top-btn" class="hide">
       <img src="./assets/up.png" />
