--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./assets/icon.png" />
     <link rel="apple-touch-icon" href="./assets/icon.png" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./style/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./style/global.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./style/index.css" />
   </head>
   <body>
