--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
           </form>
         </div>
       </div>
-      <button id="header-lang-btn" value="en-US">ENGLISH</button>
+      <div class="header-btn-group">
+        <div class="sort-container">
+          <select id="sort-btn" name="sort">
+            <option value="high-rated">평점 높은 순</option>
+            <option value="low-rated">평점 낮은 순</option>
+            <option value="recent">최신 순</option>
+            <option value="old">오래된 순</option>
+          </select>
+          <img src="./assets/img/sort.png" />
+        </div>
+        <button id="lang-btn" value="en-US">ENGLISH</button>
+      </div>
     </header>
     <main>
       <section>
