--- a/details.html
+++ b/details.html
@@ -4,6 +4,7 @@
     <title>영화 상세페이지</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./style/global.css" />
     <link rel="stylesheet" href="./style/details.css" />
   </head>
   <body>
