--- a/details.html
+++ b/details.html
@@ -4,11 +4,16 @@
     <title>영화 상세페이지</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./style/global.css" />
     <link rel="stylesheet" href="./style/details.css" />
   </head>
   <body>
     <main class="movieDetailsSection"></main>
+    <div class="image-box">
+      <div id="imageContainer" class="image-container"></div>
+    </div>
+    <div id="imageModal" class="modal">
+      <img id="modalImg" class="modal-content" />
+    </div>
     <script type="module" src="./src/details.js"></script>
   </body>
 </html>
