feat: 스틸컷 이미지에 이름표 & 오토스크롤 추가

--- a/details.html
+++ b/details.html
@@ -10,7 +10,7 @@
   <body>
     <main class="movieDetailsSection"></main>
     <div class="image-box">
-      <div id="imageContainer" class="image-container"></div>
+      <div id="imageContainer" class="image-container"><span>스틸컷</span></div>
     </div>
     <div id="imageModal" class="modal">
       <img id="modalImg" class="modal-content" />
