--- a/details.html
+++ b/details.html
@@ -17,7 +17,9 @@
       <aside class="review-container">
         <div class="review-above">
           <h1 id="title">리뷰</h1>
-          <div class="reviews"></div>
+          <div class="reviews">
+            <p id="not-found">리뷰가 없습니다</p>
+          </div>
         </div>
         <div class="input">
           <div class="info">
