feat: 영화정보 로딩에러시 메인페이지로 redirect + 검색결과 없을시 메인페이지로 가기버튼 추가

--- a/details.html
+++ b/details.html
@@ -10,7 +10,7 @@
   <body>
     <div class="movieDetailsSection">
       <header id="back">
-        <a class="logo" href="http://127.0.0.1:5500/index.html" title="웹 사이트로 뒤로가기">
+        <a class="logo" href="./index.html" title="웹 사이트로 뒤로가기">
           <img src="./assets/img/back.png" width="30" height="30" />
         </a>
       </header>
