--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
       <section>
         <ul id="movie-list"></ul>
       </section>
-      <section id="not-found">입력하신 검색어와 일치하는 결과가 없습니다 🥹</section>
+      <section id="not-found">
+        입력하신 검색어와 일치하는 결과가 없습니다 🥹
+        <p>
+          <button class="to-main-btn" onclick="location.href='./index.html' ">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            메인페이지로 이동
+          </button>
+        </p>
+      </section>
     </main>
     <button id="scroll-top-btn" class="hide">
       <img src="./assets/img/up.png" />
