--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span></span>
             <span></span>
             <span></span>
-            메인페이지로 이동
+            전체 영화 보러가기
           </button>
         </p>
       </section>
