feat: 리뷰 유효성 검사 수정

--- a/details.html
+++ b/details.html
@@ -23,11 +23,12 @@
         </div>
         <div class="input">
           <div class="info">
-            <input type="text" class="id" id="id" minlength="3" maxlength="7" placeholder="ID" />
-            <input type="password" class="pw" id="pw" minlength="4" maxlength="4" placeholder="PW(숫자 4자리)" />
+            <input type="text" class="id" id="id" minlength="1" maxlength="7" placeholder="ID 입력 (7자 이하)" />
+            <input type="password" class="pw" id="pw" minlength="4" maxlength="4" placeholder="PW 입력 (숫자 4자리)" />
           </div>
           <div class="content">
-            <textarea type="text" class="text-box" placeholder="관람평"></textarea><button class="btn">입력</button>
+            <textarea type="text" class="text-box" placeholder="관람평 입력 (5자 이상)"></textarea
+            ><button class="btn">등록</button>
           </div>
         </div>
       </aside>
